// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button blue 1`] = `
<div
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with a 
    <button
      data-css-1etths7=""
      data-css-1irnvz6=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button green 1`] = `
<div
  data-css-q43imj=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with a 
    <button
      data-css-1etths7=""
      data-css-1irnvz6=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button red 1`] = `
<div
  data-css-1bpd8ni=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with a 
    <button
      data-css-1etths7=""
      data-css-1irnvz6=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button yellow 1`] = `
<div
  data-css-2xg5hc=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with a 
    <button
      data-css-1etths7=""
      data-css-be14da=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots color blue 1`] = `
<div
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    blue
  </div>
</div>
`;

exports[`Storyshots color green 1`] = `
<div
  data-css-q43imj=""
>
  <div
    data-css-ctomgo=""
  >
    green
  </div>
</div>
`;

exports[`Storyshots color red 1`] = `
<div
  data-css-1bpd8ni=""
>
  <div
    data-css-ctomgo=""
  >
    red
  </div>
</div>
`;

exports[`Storyshots color yellow 1`] = `
<div
  data-css-2xg5hc=""
>
  <div
    data-css-ctomgo=""
  >
    yellow
  </div>
</div>
`;

exports[`Storyshots onClick displays X 1`] = `
<div
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text
  </div>
  <button
    data-css-w2n93m=""
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots onClick side by side 1`] = `
<div>
  <div
    data-css-ue58aw=""
  >
    <div
      data-css-ctomgo=""
    >
      this is the text
    </div>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    data-css-q43imj=""
  >
    <div
      data-css-ctomgo=""
    >
      this is the text
    </div>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    data-css-2xg5hc=""
  >
    <div
      data-css-ctomgo=""
    >
      this is the text
    </div>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    data-css-1bpd8ni=""
  >
    <div
      data-css-ctomgo=""
    >
      this is the text
    </div>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots onClick w/ long text 1`] = `
<div
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text. this is the long text.
     
  </div>
  <button
    data-css-w2n93m=""
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots styling child Link component auto-styled 1`] = `
<div
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with an
     
    <a
      data-css-1o01808=""
      href="https://duckduckgo.com"
    >
      Link component
    </a>
    .
  </div>
</div>
`;

exports[`Storyshots styling child anchor tag auto-styled 1`] = `
<div
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </div>
</div>
`;

exports[`Storyshots styling child anchor tag auto-styled in yellow 1`] = `
<div
  data-css-2xg5hc=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </div>
</div>
`;

exports[`Storyshots styling className prop 1`] = `
<div
  className="someClass"
  data-css-ue58aw=""
>
  <div
    data-css-ctomgo=""
  >
    this is the text
  </div>
  <button
    data-css-w2n93m=""
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots styling style prop 1`] = `
<div
  data-css-ue58aw=""
  style={
    Object {
      "outline": "3px solid red",
    }
  }
>
  <div
    data-css-ctomgo=""
  >
    this is the text
  </div>
  <button
    data-css-w2n93m=""
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;
